Add All  page with layout and content Day 2

--- a/about.html
+++ b/about.html
@@ -4,14 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Home | Simple Project</title>
+    <title>About | Simple Project</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/logo.png" type="image/x-icon">
 </head>
 
 <body>
     <div class="area">
-        <!-- Header Section Start -->
         <div class="header">
             <div class="logo">
                 <a href="index.html">
@@ -28,15 +27,12 @@
                 </ul>
             </div>
         </div>
-        <!-- Header Section End -->
 
-        <!-- Banner Section Start -->
-        <div class="banner">
-            <img src="img/banner.png" alt="Banner Image">
+        <div class="page-banner" style="background-image: url('img/hero-banner.webp');">
+            <h2>About Us</h2>
         </div>
-        <!-- Banner Section End -->
 
-        <!-- Services Section Start -->
+        <!--
         <div class="services">
             <div class="title">
                 <h2>Services</h2>
@@ -68,9 +64,8 @@
                 </div>
             </div>
         </div>
-        <!-- Services Section End -->
+        -->
 
-        <!-- About Section Start -->
         <div class="about">
             <div class="about-left">
                 <h2>About Us</h2>
@@ -82,7 +77,6 @@
                     officia, repellendus temporibus autem maxime tenetur eum esse reprehenderit a, accusantium, vitae
                     mollitia porro officia, repellendus temporibus autem maxime tenetur eum esse reprehenderit a,
                     accusantium, voluptas magnam repellat ut cum ad quod!</p>
-                <a href="#"><button class="btn">Read More</button></a>
             </div>
             <div class="about-right">
                 <h2>Sidebar Menu</h2>
@@ -95,9 +89,7 @@
                 </ul>
             </div>
         </div>
-        <!-- About Section End -->
 
-        <!-- Footer Section Start -->
         <div class="footer">
             <p>&copy; 2025 Simple Project. All rights reserved.</p>
             <div class="footer-social">
@@ -109,7 +101,6 @@
                 <p>Contact us: info@example.com</p>
             </div>
         </div>
-        <!-- Footer Section End -->
     </div>
 </body>
 
