--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Home | Simple Project</title>
+    <title>Services | Simple Project</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/logo.png" type="image/x-icon">
 </head>
@@ -31,8 +31,8 @@
         <!-- Header Section End -->
 
         <!-- Banner Section Start -->
-        <div class="banner">
-            <img src="img/banner.png" alt="Banner Image">
+        <div class="page-banner" style="background-image: url('img/hero-banner.webp');">
+            <h2>Services</h2>
         </div>
         <!-- Banner Section End -->
 
@@ -41,31 +41,87 @@
             <div class="title">
                 <h2>Services</h2>
             </div>
-            <div class="service">
-                <div class="single-services">
+            <div class="service service-page">
+                <!-- Single Service Start -->
+                <div class="single-services single-services-page">
                     <h3>Web Development</h3>
                     <img src="img/banner.png" alt="service1">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis aperiam a ducimus error
                         deleniti, eveniet eligendi itaque sit tempora dolor perferendis, nihil quo doloremque! Vero
-                        obcaecati sequi.</p>
+                        obcaecati.</p>
                     <a href="#"><button class="btn">Read More</button></a>
                 </div>
-                <div class="single-services">
+                <!-- Single Service End -->
+                <!-- Single Service Start -->
+                <div class="single-services single-services-page">
                     <h3>Web Development</h3>
                     <img src="img/banner.png" alt="service1">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis aperiam a ducimus error
                         deleniti, eveniet eligendi itaque sit tempora dolor perferendis, nihil quo doloremque! Vero
-                        obcaecati sequi.</p>
+                        obcaecati .</p>
                     <a href="#"><button class="btn">Read More</button></a>
                 </div>
-                <div class="single-services">
+                <!-- Single Service End -->
+                <!-- Single Service Start -->
+                <div class="single-services single-services-page">
                     <h3>Web Development</h3>
                     <img src="img/banner.png" alt="service1">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis aperiam a ducimus error
                         deleniti, eveniet eligendi itaque sit tempora dolor perferendis, nihil quo doloremque! Vero
-                        obcaecati sequi.</p>
+                        obcaecati .</p>
                     <a href="#"><button class="btn">Read More</button></a>
                 </div>
+                <!-- Single Service End -->
+                <!-- Single Service Start -->
+                <div class="single-services single-services-page">
+                    <h3>Web Development</h3>
+                    <img src="img/banner.png" alt="service1">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis aperiam a ducimus error
+                        deleniti, eveniet eligendi itaque sit tempora dolor perferendis, nihil quo doloremque! Vero
+                        obcaecati .</p>
+                    <a href="#"><button class="btn">Read More</button></a>
+                </div>
+                <!-- Single Service End -->
+                <!-- Single Service Start -->
+                <div class="single-services single-services-page">
+                    <h3>Web Development</h3>
+                    <img src="img/banner.png" alt="service1">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis aperiam a ducimus error
+                        deleniti, eveniet eligendi itaque sit tempora dolor perferendis, nihil quo doloremque! Vero
+                        obcaecati .</p>
+                    <a href="#"><button class="btn">Read More</button></a>
+                </div>
+                <!-- Single Service End -->
+                <!-- Single Service Start -->
+                <div class="single-services single-services-page">
+                    <h3>Web Development</h3>
+                    <img src="img/banner.png" alt="service1">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis aperiam a ducimus error
+                        deleniti, eveniet eligendi itaque sit tempora dolor perferendis, nihil quo doloremque! Vero
+                        obcaecati .</p>
+                    <a href="#"><button class="btn">Read More</button></a>
+                </div>
+                <!-- Single Service End -->
+                <!-- Single Service Start -->
+                <div class="single-services single-services-page">
+                    <h3>Web Development</h3>
+                    <img src="img/banner.png" alt="service1">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis aperiam a ducimus error
+                        deleniti, eveniet eligendi itaque sit tempora dolor perferendis, nihil quo doloremque! Vero
+                        obcaecati .</p>
+                    <a href="#"><button class="btn">Read More</button></a>
+                </div>
+                <!-- Single Service End -->
+                <!-- Single Service Start -->
+                <div class="single-services single-services-page">
+                    <h3>Web Development</h3>
+                    <img src="img/banner.png" alt="service1">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis aperiam a ducimus error
+                        deleniti, eveniet eligendi itaque sit tempora dolor perferendis, nihil quo doloremque! Vero
+                        obcaecati .</p>
+                    <a href="#"><button class="btn">Read More</button></a>
+                </div>
+                <!-- Single Service End -->
             </div>
         </div>
         <!-- Services Section End -->
@@ -82,7 +138,7 @@
                     officia, repellendus temporibus autem maxime tenetur eum esse reprehenderit a, accusantium, vitae
                     mollitia porro officia, repellendus temporibus autem maxime tenetur eum esse reprehenderit a,
                     accusantium, voluptas magnam repellat ut cum ad quod!</p>
-                <a href="#"><button class="btn">Read More</button></a>
+                <!-- <a href="#"><button class="btn">Read More</button></a> -->
             </div>
             <div class="about-right">
                 <h2>Sidebar Menu</h2>
