Fixd Code Formate

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         <!-- Banner End -->
 
         <!-- Contact Section Start -->
-        <div class="contact"> 
+        <div class="contact">
             <div class="contact-left">
                 <div class="title">
                     <h4>Get in Touch</h4>
@@ -55,7 +55,8 @@
                 <ul>
                     <li><span class="contact-li">Address:</span> <a href="#">123 Main St, Anytown, USA</a></li>
                     <li><span class="contact-li">Phone:</span> <a href="tel:(123) 456-7890">(123) 456-7890</a></li>
-                    <li><span class="contact-li">Email:</span> <a href="mailto:info@example.com">info@example.com</a></li>
+                    <li><span class="contact-li">Email:</span> <a href="mailto:info@example.com">info@example.com</a>
+                    </li>
                 </ul>
                 <img src="img/banner.png" alt="Contact Image">
             </div>
@@ -64,7 +65,9 @@
 
         <!-- Map Start -->
         <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d143760.37484681729!2d90.33728812288359!3d23.780975728197344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8b087026b81%3A0x8fa563bbdd5904c2!2sDhaka!5e1!3m2!1sen!2sbd!4v1753043293808!5m2!1sen!2sbd" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d143760.37484681729!2d90.33728812288359!3d23.780975728197344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8b087026b81%3A0x8fa563bbdd5904c2!2sDhaka!5e1!3m2!1sen!2sbd!4v1753043293808!5m2!1sen!2sbd"
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <!-- Map End -->
 
@@ -83,5 +86,4 @@
         <!-- Footer End -->
     </div>
 </body>
-
 </html>
