Enhance contact and index pages with Font Awesome icons and update styles for better readability

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | Simple Project</title>
+    <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.2/css/all.min.css" rel="stylesheet">
+
     <link rel="icon" href="img/logo.png" type="image/x-icon">
 </head>
 
@@ -53,9 +56,12 @@
             <div class="contact-right">
                 <h4>Contact Information</h4>
                 <ul>
-                    <li><span class="contact-li">Address:</span> <a href="#">123 Main St, Anytown, USA</a></li>
-                    <li><span class="contact-li">Phone:</span> <a href="tel:(123) 456-7890">(123) 456-7890</a></li>
-                    <li><span class="contact-li">Email:</span> <a href="mailto:info@example.com">info@example.com</a>
+                    <li> <i class="fa-solid fa-location-dot"></i> <span class="contact-li">Address:</span> <a
+                            href="#">123
+                            Main St, Anytown, USA</a></li>
+                    <li>  <i class="fa-solid fa-phone"></i><span class="contact-li"> Phone:</span> <a
+                            href="tel:(123) 456-7890"> (123) 456-7890</a></li>
+                    <li><i class="fa-solid fa-envelope"></i><span class="contact-li"> Email:</span> <a href="mailto:info@example.com">info@example.com</a>
                     </li>
                 </ul>
                 <img src="img/banner.png" alt="Contact Image">
@@ -86,4 +92,5 @@
         <!-- Footer End -->
     </div>
 </body>
+
 </html>
